@@ -11,24 +11,24 @@ DIST kdepim-4.11.5.tar.xz 13442908 SHA256 0c7a4dab0d891c6c2f1a3cd0f7df656ee11bf6
 DIST kdepim-4.12.3.tar.xz 14254800 SHA256 d9e64cac5638884bd33f65f0f4d25a3ac891c809c87f5f65363fa17a97500cf0 SHA512 9e6e2695fa7346c7157447365e1ea25dae6237419c6714439ae6d7888f17db3306b08a62033fb5d2a16fd4dc2c8d84537115e63307a3b0b3232b3ca128f0b0df WHIRLPOOL 9d4eede72554d72f6b3e36b1943afa7c86c04cf50fcb23bb3b9fc8f7eeeb64de967a8016a3901b970915bb95d0a0f34e3816e11631ddf1fd1161f4fe80559e7c
 DIST kdepim-4.4.11.1.tar.bz2 8964708 SHA256 a2fa237a3d880cc55a6c94450b93a7918bb0d5e3943eb7a759c8789de1ed41bf SHA512 7450ba9985c5583847d1fc3d214940cef130150a3591c3cbb73bc15624ee0298805d5dc25f3cd3a135091c1d0491b865961d52aa8feef623219eed9364dd86bf WHIRLPOOL 349a72c5c6859c7cafb1aefdf80b80482102c8b1d6e0123c6c410d262c3908b9572daa1950e2fb41e6bc727430fc91bb57b7276e345553ed15d792fa63aba5ec
 EBUILD kmail-4.11.5.ebuild 2446 SHA256 76f0895658160c1da7d07df4882a3e697db95d26fd52506db99c2614ec1876c1 SHA512 bc0d989a1b259b4d98643a1a9e882b3f54643a47a721fbb10b1c9b173d5cfa68a8969796852d15ed08e22e907e6d54992b4096f3431faeb3bfcf5c2fd4c88c4d WHIRLPOOL 3aedc4e90967388f681411e26afe26d66b225d57d1f1ef244d71d403d1b7e7702cc9de6735563f6400bbb700296c6f6f088844d6506c7b6bdf87bde60402d03e
-EBUILD kmail-4.12.3.ebuild 2600 SHA256 920000664b89bbb35e6e06f229c8d6a5e117fc5946254bb21ad80ce5708cb49b SHA512 d9aa53fa2903f7b2186055fd627b20ca90301e8a0ad29c5d31219d4c455beffa89fb3c319460ee071e4d79473db8c25771c9e322db7d626dda7a68d8bb9de8cf WHIRLPOOL 81158b15edb345614700f1c5b7bcab0bc11116756570c281bcd2ce43ddfbc050fe37d0081da452a7aaf08c33ca0e13643d3d340158bbe359393cf135dc4a64ba
+EBUILD kmail-4.12.3-r1.ebuild 2618 SHA256 8942326cbc361939460b97aca21cff718828b27baa035123370cb2002fa82802 SHA512 a9b2db3ed6c6490e0e7a6f4e1ac6d54d61bc360e8873472f8174ff97d46a37fe3d3bfdc56e84fc85389daed6fee3b289646c0ab4b0a566aa369af3d8cf7d6a20 WHIRLPOOL c1e6cb3723e7070e50fe91a596124baf1b3438461c3fb2867ff3a9eb2254ba38b8efabda4ec23fa635283408da6d89bf13fb9dc6fe8295269658fa491a1a694c
 EBUILD kmail-4.4.11.1-r1.ebuild 1830 SHA256 284a0531e463f7796f5d842cf293c7f9287cd1eeb9217e448a4164f100276ed9 SHA512 3aae45b573288490468922c3051103a356d6b5e5bf2f45d2498aaf8bdf93600fa8ec1ba5b05005d4162ffdbff7343de7a923ed76f91dd3bb223b14d6aa4b81d6 WHIRLPOOL adc5fa7d9935776d377c06a0f6456c628253a4d859cf49c2a11c67ac979a80f81906df1815da184681a303ee3febc825aa4464d6b143eb371816627bb5fe7cd5
-MISC ChangeLog 51284 SHA256 caa25e0c48a1b3f5aa60ae3bf765c8bf8706ac57f863727a7fe8aad6ce68a5a9 SHA512 9e67b73e1abc5cc4a89d7afe2ae7b4efa0b0f1dccfedf5f5d9ddc5f906f87761b492526459b864d09d17719cc60fc951b7a2e85d2e77333611f634c0fa693981 WHIRLPOOL 90907dc79801201b622d1613c65153cacc5443cdefec2895bd386cf07cf3a10ba05cbdcdcfc4db05ee045a27847520f5ef6bd7c9aa976df5d8c691c2cb9e431b
+MISC ChangeLog 51481 SHA256 240b8cd914d1d53e07123d0db5d0641f83d8331c39720a010ea03540c6a52cdf SHA512 22041d3fbb1ee0db91fa9619e82b4a03955849a1dcfff96ad1bafcb91daad4ca27dad886eceaf749ff289963287b0b4760d8c8b2870593d7186320ee831b13d0 WHIRLPOOL 360e1e74d4f920042a84c6909b4efd93029ca836fbe4a8e6761f2aafc4d8850f55247ace02efca219bc7e4fa2a2feafd9f1b3b6a76801317ea54c94c8d5c6ac5
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTHvyGAAoJEGVpnaTzz9K9NIIP/j1dX7lR9giZqd0GbFA4KTUV
-ExIxXUPjVJ5fq1DDRRFziuxhz0qV5WsceQedXZjmqXmOA3OKSK0WrGrJRj8/fHDw
-hvetB2GZyFp43rTPvzVHCKxh5qOY3r3dtyipu0uwNHhdOu+F0fEpBWUsLWqi1VJm
-byLBzT/hRERaRH9BQzUP3KUmmM8wrQzHIc4/yUAtOGVEXBdyIU+d8o9ZQFQleP+1
-vpD0DyLjtH9hartPKsfhxGpn358Hdq5QpD4yK6Odv+tC6MSDnTVPlSbclmyxh+en
-abpkZ5v7pB/mifrrl/IYx+B/VdW2q8+CClW7YXKrDmn7KmzIb5jG/J1kJK7uwf8O
-fpBthi2dqS3fp0gbZjSLOL32FnLXEOO/oRUq6WhHttWGZBj2TpMZW1AbyeqjYCiY
-fbJZEMU3fXBePdqZiFTyuK7mLRTDww3ZTOOIkY9vLCvKzw0LDXkwcvpNQJbT9Z6T
-XVBfvPqwjCVZUM8M0AcuezMPx83c55/8M+A4cS2bS1GVEWrFpUDN5GHwlPXpj+op
-CVZlFONwzMVYLGXHYHRyrwDDXf4FTyzjfpQu7CDujbKJDc68RE2EJmMU2TdUaBsi
-a3M9N1U03cw0fC2fIpsN/TpVLu36aEsCKTDd1AIVAty924iRyngVn1ZYqSJU5tAT
-MVwgM7qt7TjrNDoqfuX4
-=6YLH
+iQIcBAEBCAAGBQJTH0AYAAoJEGVpnaTzz9K9fugQAL0tZfbXAviTGzGeH9ebQCfk
++78dKds8fiWP/bzO5wYEhPctilHMCpScf4buxZW4XWIHck0zd2ANyTA0jzwHP23I
+VisycKoSRh59NfpUwF0kU5Bxuj74TLB674nKiqNjZnGHaT9sg4llWVpwNcVoOInq
+2ALr1MwL6JEBUJp/hPGvOqozhpQ/Jko/VFFZsDpsKnALjFSrkC7FkkY1gxu+DE+4
+/FDUYgIKNXY8BsGVwskviOeuOy5Yv9FCHScX3HXrOfB2hrrtO6hsogKJNT+6zJtZ
+S1ApLVdVpbAMKyESk4lJEIDTc1rAITaTPJ8PCtXq6RpTrV8iCtdkw7hY1dI4wMV3
+MS1eiAgulXBD7Ya2qlG3MC9o1pZQJ+O+HqYCvcc24xyXuRI6AeNHlaRZeE5IdvMb
+840E7/iyBYI/yAXbWyUTnUUCnFWUccyipHs1I9f2m5oSPXAQaiN7FVOv//0lRTyB
+GHOLlyLQs2w2bvrJvzOUsLVx9Ue3od39AmbdTbT+0ZfF1SXpVcbkw7DyHpJBwWAZ
+XvW5xf5uBH8SLZCIGqO2l/oT4DsIycVi2UY0REIB4g7u6yGBK34C9qtbqrpEI/Pp
+wN1Ia8aInfyFS3TTcu+Joo7ni0T72SdIel1oVp8MhmCgJN6awoUT7jWSZvCB8pwy
+Vmgfm2qCCAjXyUt84wPf
+=Q1tW
 -----END PGP SIGNATURE-----
