@@ -11,4 +11,4 @@ RESTRICT=test
 SLOT=4/4.12
 SRC_URI=mirror://kde/stable/4.12.3/src/kdepim-4.12.3.tar.xz
 _eclasses_=cmake-utils	f28d5be602208540bebed26c4d22c61f	eutils	40081e8c7e7f7c4f9db349a1d6d52925	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	878b2df7577220756ff2e7e9a0c3476c	kde4-functions	7fc09e82c0d1735f44aedfa8e5073065	kde4-meta	28d3b06d485ec5f44e571b20e62d4aa7	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=ac8a917b51e674c8a469d43d9b03c674
+_md5_=a5299b762862cafba371f0e6e039a5d3
