@@ -9,6 +9,6 @@ LICENSE=google-chrome
 RDEPEND=app-arch/bzip2 app-misc/ca-certificates dev-libs/atk dev-libs/expat dev-libs/glib:2 || ( dev-libs/libgcrypt:11 dev-libs/libgcrypt:0/11 ) dev-libs/nspr dev-libs/nss gnome-base/gconf:2 media-libs/alsa-lib media-libs/fontconfig media-libs/freetype net-print/cups sys-apps/dbus >=sys-devel/gcc-4.4.0[cxx] sys-libs/libcap x11-libs/cairo x11-libs/gdk-pixbuf x11-libs/gtk+:2 >=x11-libs/libX11-1.5.0 x11-libs/libXcomposite x11-libs/libXdamage x11-libs/libXext x11-libs/libXfixes x11-libs/libXi x11-libs/libXrandr x11-libs/libXrender x11-libs/libXScrnSaver x11-libs/libXtst x11-libs/pango x11-misc/xdg-utils !www-client/google-chrome !www-client/google-chrome-beta
 RESTRICT=bindist mirror strip
 SLOT=0
-SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_35.0.1870.2-1_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_35.0.1870.2-1_i386.deb )
+SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_35.0.1883.0-1_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_35.0.1883.0-1_i386.deb )
 _eclasses_=chromium	4a9f555199b35aa57f60b0e9b9627d2a	eutils	40081e8c7e7f7c4f9db349a1d6d52925	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	fac675dcccf94392371a6abee62d909f	pax-utils	2424f959506320f5196de8f79fa05297	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	60422068bae2b3406a8a40db45ab5b95	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=bf5d42aad24b6b6e9b135cd4f9b637ba
+_md5_=354ef69c506055948303490e242f8b4d
