@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-unstable_35.0.1870.2-1_amd64.deb 50194844 SHA256 af988862d8ed67fbf0fb3a0a1b30328d11d707365b5e31a059d41f8793d770ea SHA512 03702316ea70c04fd4471957e1f6fc82425e21d52d1da946f42d776ad0d2b8467e4870d3d10d0d12e83d10aa76cf3da2007829455eb3986efcc6fef73ecdcde0 WHIRLPOOL 100f16e2e92a6671c32d44d719e2f0291b1e848abcf923664fbc2ffa23dca61981e43dfaf88c2a0812019345242c842a9565b0b0dab0dd187aeb506ede51c8a6
-DIST google-chrome-unstable_35.0.1870.2-1_i386.deb 50389662 SHA256 0ddd44bd1924fd06268231a65ab5120562d5d0d53a5b0c4d364a70f56abea8df SHA512 58fd19fe700fc53b178257f8c890ea686f852e55bde18c65119109aea0b108f63be9feb7c7d3d3f5e79d1d0f966ebccefae659122f7b192d9a28ab6a9d0f7caf WHIRLPOOL 51fbff1cfbb52e8e5e07a91e456820d5e9d09a69d046f886cb8b9e52c29db7b0c55b5ea252e332bcab811a973b9c3af90a33d0856443cc16db6c6e1493716c81
-EBUILD google-chrome-unstable-35.0.1870.2_p1.ebuild 4529 SHA256 3d177bdd2ccdc52934fefa4c954d73eb0f3f190bb1b98e8b03d7434b1a693645 SHA512 fb9755a5a5919b02ffd58c52a1b6c173d9fc4afc6718fc9b7ffea4158e6b4abf490ef58460ce9336b592fc17ac948d5746ffd85216a0e005d2423146af8a9eaa WHIRLPOOL 284b692c798087a9efe564ff39880f688bc030ecc775b040133ceb8f63a3f8156aa2fa8a35d01c1c84c93f70616ad95fd3378f2b05fa75d15080d95c96858532
-MISC ChangeLog 2984 SHA256 fc1fe85d4b8863a3810790ec3c473b7592d3d1edfd6a8e06a7dee53a607753ed SHA512 4b39953f580d5c881c1123b573f95cbd75538e8276fcb513a4f7d5cea734bb2cb3e8ef3f4b197f94c865d39a5b61a25f6876d1a7603c378ad3d8c91c11307471 WHIRLPOOL ffc41de7c0fe3adc0b785a920a0580e5ab89e770bec62a5f07f80251db24dd657ed3a1ed747f33261ac084b974f29d6dba728cfcd1b8ffdba464f125704b6ee9
+DIST google-chrome-unstable_35.0.1883.0-1_amd64.deb 50124108 SHA256 42d46aaceba9ba423cadff7d99e429bfef0443cb86534aab37817904432574a6 SHA512 0bb38cd405630e85763598d19b5a057b46caaba2f3813240d53f70dd7529dbbab72a274d4819b1207e4becae666684ee8e47e4f1e609caec9af37e932837d289 WHIRLPOOL a30143b3309f2544b25e14f936005101777febad67f3ab0177ef2eb17ce11ebd2c15fae6bdda0f7f9bfb90a54f2d35863b520dbf60811ecb18e0198f684bd4d0
+DIST google-chrome-unstable_35.0.1883.0-1_i386.deb 50386028 SHA256 c2caea3da1b0fa269064dbd951b35f1286e5ed4732b8908205c8fc9e58392cfe SHA512 e38aa32bd1d1d0606bb41b9e8aa88e04780859280e531464aeef4ebcdccd062324031bd9314853e37b97c2d60cfa083f689e7c2dd7ee0a8c26a6259e8517c7d6 WHIRLPOOL 60304686d4193af71a01a7740d1a717e3d9a1aef497c2828a8ae052c1e6926f5abd7055aa52ec772c7ec51901871303b42208bc6d23eab6c306b6b91d0b06eba
+EBUILD google-chrome-unstable-35.0.1883.0_p1.ebuild 4529 SHA256 d5cc9fbe1d88420527ce13dc93ac48b0120633fa5c6b58b40db5d32a0765a704 SHA512 9c2ca4be2c87f8782b282a5db4fd11850ff4c81e990231e240817d53eee24a9ffba80d25f6aa9118f25a85f66c8ec849cb2104dfd1345f585492e811ec3802e8 WHIRLPOOL 6ee5cf4436cfa1b6af7053ff8f569ad14953dbbabf0ef90e94f5578950f0d2fea9faa8fc1cbc0a3c9f1f65c9103e788920a1d2e32544e47940cf3dcb991fcefd
+MISC ChangeLog 3212 SHA256 002f6df81d5536f1883428378a6c15fe80fae2094f91d6611c3dedcd98970c8d SHA512 12d521ab8374943825eadfc96b4c6e62e34bcf5d7465e31128ef43e8d677733fe9d6c1d29c11427b147f85bbfca2ec0f972266dc8c0a8017164b091200e30331 WHIRLPOOL 1e6b1fcbc55805782dac4b65edd16c6fa89552a485d6808959ab958574e970e5f63c98b6e3e4e0b83c1f4a4c1aa6c192f4e423120f9fc27a55d4c53d617288b6
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMZpYcACgkQFYEBGcdFJfKD5AEAk+cSVprfnhptiU0ygAhu2V1n
-OuqewhQlrykCTPxeqwAA/j9nDuVnLPCKhsn50QDV6JlXuwVHrjgUdKPuY+aBzXyI
-=67Oh
+iF4EAREIAAYFAlMfQT8ACgkQFYEBGcdFJfLa1gD/f/sGoDraXGtNAUB+g3dxeWD7
+zo0PWTILFzgzZt6Nco4A/1yYN8I2jWdcor4rihG/wIqt0cQHzWKLzGjOWsC10TbC
+=6t34
 -----END PGP SIGNATURE-----
