@@ -5,18 +5,18 @@ DIST google-chrome-beta_34.0.1847.45-1_amd64.deb 48145362 SHA256 46f2b2225fed59a
 DIST google-chrome-beta_34.0.1847.45-1_i386.deb 48410460 SHA256 5eb035bc4259bfe5ebecfc40613e974488b4a5cf64cdaaec5002513adf2a02ab SHA512 03a3fe6654a2ff5256c91dc4297be1af79a165db39eb6c9d587b2a8c855641dcc85ec571ad13380f1038e179ad0a62799e68457159ed878fe7a8380368e89b0d WHIRLPOOL c0c026c876bb815b263dfdc469cf2daa9c26fa24fd4ecb3e845babd4cc3e694d9f04b306ca13356bcbdff4c0ef70cafbd273d3e97fe54a9c2bc9e672391bb80e
 DIST google-chrome-stable_33.0.1750.149-1_amd64.deb 50540796 SHA256 e64c08c47f46de2a16270aa31cead8588f1ff34f0d4aae4941cb1db7db366a48 SHA512 712a75c6b98cb45db3b88a04bdce1abec4e3591e101b4da8321fb1cc24d08634a38b5cc8a06d59ad5ba25071b3407aa9417fd27d7b21f9af2e301a11f518cd78 WHIRLPOOL 008ed8e9368c43522497170b08ba7d22b1f3b218961a7866c0505f0d4bdc2f6f320deeff9c102626ff06eab92e5d3a754da9a8f9796530c53d2f5767d5ebcda8
 DIST google-chrome-stable_33.0.1750.149-1_i386.deb 48249534 SHA256 e1fb67f4d1ea9ea3dbee812fc8e0c3e7dcedb611d768a6b016ecc463fa35d7ce SHA512 e7dac835c318d191c808ccdb7f8089ea4f09f98eb0bb40c7184b6504cdf027fbc42e79f54174a9801ddbccfec1b77b07a0288a7b2605001e379d452485ebff03 WHIRLPOOL 444041703e78f31a2fdfabc3e961b8b4e2267c306fed8b2b5a0fee97265afffb74f1922376d30ed7c0476f030400eadfd3c04a9272ceb3127e0b58d958d5b7c3
-DIST google-chrome-unstable_35.0.1870.2-1_amd64.deb 50194844 SHA256 af988862d8ed67fbf0fb3a0a1b30328d11d707365b5e31a059d41f8793d770ea SHA512 03702316ea70c04fd4471957e1f6fc82425e21d52d1da946f42d776ad0d2b8467e4870d3d10d0d12e83d10aa76cf3da2007829455eb3986efcc6fef73ecdcde0 WHIRLPOOL 100f16e2e92a6671c32d44d719e2f0291b1e848abcf923664fbc2ffa23dca61981e43dfaf88c2a0812019345242c842a9565b0b0dab0dd187aeb506ede51c8a6
-DIST google-chrome-unstable_35.0.1870.2-1_i386.deb 50389662 SHA256 0ddd44bd1924fd06268231a65ab5120562d5d0d53a5b0c4d364a70f56abea8df SHA512 58fd19fe700fc53b178257f8c890ea686f852e55bde18c65119109aea0b108f63be9feb7c7d3d3f5e79d1d0f966ebccefae659122f7b192d9a28ab6a9d0f7caf WHIRLPOOL 51fbff1cfbb52e8e5e07a91e456820d5e9d09a69d046f886cb8b9e52c29db7b0c55b5ea252e332bcab811a973b9c3af90a33d0856443cc16db6c6e1493716c81
+DIST google-chrome-unstable_35.0.1883.0-1_amd64.deb 50124108 SHA256 42d46aaceba9ba423cadff7d99e429bfef0443cb86534aab37817904432574a6 SHA512 0bb38cd405630e85763598d19b5a057b46caaba2f3813240d53f70dd7529dbbab72a274d4819b1207e4becae666684ee8e47e4f1e609caec9af37e932837d289 WHIRLPOOL a30143b3309f2544b25e14f936005101777febad67f3ab0177ef2eb17ce11ebd2c15fae6bdda0f7f9bfb90a54f2d35863b520dbf60811ecb18e0198f684bd4d0
+DIST google-chrome-unstable_35.0.1883.0-1_i386.deb 50386028 SHA256 c2caea3da1b0fa269064dbd951b35f1286e5ed4732b8908205c8fc9e58392cfe SHA512 e38aa32bd1d1d0606bb41b9e8aa88e04780859280e531464aeef4ebcdccd062324031bd9314853e37b97c2d60cfa083f689e7c2dd7ee0a8c26a6259e8517c7d6 WHIRLPOOL 60304686d4193af71a01a7740d1a717e3d9a1aef497c2828a8ae052c1e6926f5abd7055aa52ec772c7ec51901871303b42208bc6d23eab6c306b6b91d0b06eba
 EBUILD chrome-binary-plugins-33.0.1750.149_p1.ebuild 1896 SHA256 92608b038a4fc4109bc305accdc9903a86dfe5ca842cac3611bd7320a89b186b SHA512 444858f098a7b4933a72ba0a6102396769e0cc5c277c4d1513dd266299fdc340ea697d7f9a61cfb77ad0cbec9ce37d42b90bc81de95220bbf57e64eb3c52032d WHIRLPOOL 04ac18159bab61dce4ec83e0293681cabd2d0416774183cedd0c50c2082d2a285c620e345e98ea4a12781eefa9f39aa41b95277915c1a95a9f6f7a4af0b78da5
 EBUILD chrome-binary-plugins-34.0.1847.45_beta1.ebuild 1906 SHA256 a7756340d5e566a9778ab2eced1e322f74665b41a981de7f068bbb11a1e2b223 SHA512 3cd13371e2cfdac88f48e0b21c869aadd29d311461ed760a6f1e5713e280a51581c609eb4e23c613d45d1271191a6b10694d6f48fdf30610a7624c711a1c96cb WHIRLPOOL 845946712f21f2ef82350f620b543aadf8c3512f0798de10181cb1c65ed90021b5f227936f7a20a2d1e2c1cfe87e8c96084a598427bba8b1419f6d6b493339cd
-EBUILD chrome-binary-plugins-35.0.1870.2_alpha1.ebuild 1906 SHA256 c2410dfb75e3af4ea2a5817c2cb049cc1f1f2e1db274ecf57c119d000687cdc0 SHA512 9e2b2ac92a7d817190c024cd45782bdaf9a68e47166209774ac67756691949d82de36ac9332aba64bf5d81b9c922309f2cf4f1e475036f910b434347e35ac4a5 WHIRLPOOL a9b174b82ec813b6eacc09613c9021f9dfe5b3c8e2a00d7716d6059c2c1a88f025bc9432d4eddeff55b192317c614142acfe112b96e0f159b263fe3b70e394f7
+EBUILD chrome-binary-plugins-35.0.1883.0_alpha1.ebuild 1906 SHA256 1837ef03d13218df0ef6f5f9def4a35a4bcfb3e3a8e9f43fbcd0fc146feb803f SHA512 52e75fdf06785971545dfd83348da220c9ab73cb802847e4bb5e35426d1323b68816c86ee748da5d6bf2d8109aef6926ecec79e6ff9d570e8ee49ebe6d661101 WHIRLPOOL 27455d14cf328f026bd257e4608464f9cd82a6b29063275d1f75a260292d8d49bf48e839bd07b8cd8ea587b34821d5af569387508a5ffb541fb1693b0fbd3d28
 EBUILD chrome-binary-plugins-9999.ebuild 1917 SHA256 bdadaa655b0e4ebae9de2e377d1f6a60852ad9220895d4a1ffb6537f526e43dc SHA512 c49f0bec17cecb2c60764170cf2f506c3b555590308b363e4efc577796559a2e7ae81e95294023cfdf69034579a89283f2761552fa42dfdc4dceb64b795a1119 WHIRLPOOL 0cecebad5f50e0b13e458d6644e27c04d66d87b71a7df48ae0651fbf81b45a1b88a76544d88c5b6dbc358adec0d9ee7bb2562e45e2e4395e01aa846694a3a399
-MISC ChangeLog 31900 SHA256 17338474826119fab2c8fa68269ba2210154d694c7f0605e55b284386ce381d8 SHA512 ef7c04b7e16ee237a3c0ea79622ca4e9dfcdaa0d480a68994f363ffec0835dfb2aa4e42587d4060c13c33476b2f7c6dbd8a4746f486946fb53c22cad7786c697 WHIRLPOOL 7734fb8d1cc625eaa91b9066850d5aa8d4bec36557b9fd751352cdedabddfefe76478500f20a56f0bfb19a0a480b1835f360acc6aece5d1e81e95f413a4b4d21
+MISC ChangeLog 32137 SHA256 e20ef6456e667fa3d5281d4606cc4a16dbfbf790b03cd6eaf94706c6cb376cb7 SHA512 6113bbcd5b026842d79867d5cb97b0daca3083f96394673200dfee2c8602956bf4aae4c37544096a46c9fbf7aea65b00b391bfcbf763dd28f06adc7b5aef8d9f WHIRLPOOL c85b4b0bc09465e5d84870ce8f7709f050ebd5ec1f0cf4e28896853f674c67e459274ef64e1a8530d1f17aa8f42f002b523a51b91b9e3e79e607d0666610c4fe
 MISC metadata.xml 409 SHA256 d40d69b26dd8aefe8da69937e54e0a885d6867e28e42c5dcbe193233a84ee533 SHA512 bdf4f11c173af9f80b3475f8ea32ba966806d1e0e694bd55a6a4960717e3f3ffff69eabb060ae5ee4d3b39cdf18eeeff45c9d431c3b6ce8ae5c271c7a409aa71 WHIRLPOOL 7319320d648a8aae0eec726a8ab489bb71fe5f93dfb40847e97344a02be85a09ba931d5aeee8fdb13d899de3c90746c75a59897287c715dd771dfbe8863b803b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMfMQAACgkQFYEBGcdFJfLN3wEApSbn7dZfR0FPBgIh/Ozn6YQG
-TAn3BHenm21ig1vt2p4BAKLGeamXABu3P5QruCF451ax19DSH8fR2QmSUw8nc2FR
-=3tB6
+iF4EAREIAAYFAlMfQVUACgkQFYEBGcdFJfJeswD/aEEfHJJ+JwR9glyGu0cdznnk
+gscFlSdLUqTRyCjqMO0A/1cmHa2QOsvnJCmycM3tJD59bo14AHKLF2YbkF0se+9H
+=0CrW
 -----END PGP SIGNATURE-----
