@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/chrome-binary-plugins-35.0.1870.2_alpha1.ebuild,v 1.1 2014/03/07 10:55:28 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/chrome-binary-plugins-35.0.1883.0_alpha1.ebuild,v 1.1 2014/03/11 17:01:04 voyageur Exp $
 
 EAPI=4
 
