@@ -1,6 +1,13 @@
 # ChangeLog for www-plugins/chrome-binary-plugins
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.113 2014/03/11 15:51:18 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.114 2014/03/11 17:01:04 voyageur Exp $
+
+*chrome-binary-plugins-35.0.1883.0_alpha1 (11 Mar 2014)
+
+  11 Mar 2014; Bernard Cafarelli <voyageur@gentoo.org>
+  +chrome-binary-plugins-35.0.1883.0_alpha1.ebuild,
+  -chrome-binary-plugins-35.0.1870.2_alpha1.ebuild:
+  Automated update.
 
 *chrome-binary-plugins-33.0.1750.149_p1 (11 Mar 2014)
 
